--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DM<!DOCTYPE html>
 <html>
   <head>
     <title>Title</title>
@@ -21,7 +21,7 @@
     </script>
     <script>
       var slideshow = remark.create({
-        sourceUrl: 'markdown.md'
+        sourceUrl: 'README.md'
       });
     </script>
   </body>
