--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ DM<!DOCTYPE html>
     </script>
     <script>
       var slideshow = remark.create({
-        sourceUrl: 'README.md'
+        sourceUrl: 'https://raw.githubusercontent.com/trapwalker/geoguide/main/README.md'
       });
     </script>
   </body>
